mutants.out/log/crates__workflow__src__lib.rs_line_60_col_9_001.log

*** crates/workflow/src/lib.rs:60:9: replace Workflow::edges -> &[WorkflowEdge] with Vec::leak(vec![Default::default()])

*** mutation diff:
--- crates/workflow/src/lib.rs
+++ replace Workflow::edges -> &[WorkflowEdge] with Vec::leak(vec![Default::default()])
@@ -52,17 +52,17 @@
         &self.entry_node
     }
 
     pub fn nodes(&self) -> &[Node] {
         &self.nodes
     }
 
     pub fn edges(&self) -> &[WorkflowEdge] {
-        &self.edges
+        Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 #[derive(Debug, Clone, PartialEq, Eq)]
 pub struct WorkflowEdge {
     source: NodeId,
     target: NodeId,
     kind: WorkflowEdgeKind,


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=workflow@0.1.0
       Fresh node v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/node)
       Dirty workflow v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/workflow): the file `crates/workflow/src/lib.rs` has changed (1778057879.571049888s, 3s after last build at 1778057876.558177372s)
   Compiling workflow v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/workflow)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name workflow --edition=2024 crates/workflow/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2012b3c4eb9d4337 -C extra-filename=-7bbe6559442a70d2 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rlib`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name workflow --edition=2024 crates/workflow/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2e7419a2ef4117ad -C extra-filename=-8f9285c1db0b2396 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rmeta`
error[E0277]: the trait bound `WorkflowEdge: Default` is not satisfied
  --> crates/workflow/src/lib.rs:60:24
   |
60 |         Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
   |                        ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `WorkflowEdge`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `workflow` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name workflow --edition=2024 crates/workflow/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2012b3c4eb9d4337 -C extra-filename=-7bbe6559442a70d2 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `workflow` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name workflow --edition=2024 crates/workflow/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2e7419a2ef4117ad -C extra-filename=-8f9285c1db0b2396 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rmeta` (exit status: 1)

*** result: Failure(101)
